# MyLabsKPI

./: CMakeLists.txt  DP0102  Task.cpp  Task.h  Util.cpp  Util.h  main.cpp
labs/: Lab.cpp  Lab.h  Lab2.cpp  Lab2.h  Lab3.cpp  Lab3.h  Lab4.cpp  Lab4.h  Lab5.cpp  Lab5.h  Lab6.cpp  Lab6.h  Lab7.cpp  Lab7.h  Lab8.cpp  Lab8.h
prac/: PR2.cpp  PR2.h  PR3.cpp  PR3.h  PR5.cpp  PR5.h  tree.cpp  tree.h
